# battery-reader

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  pilum.txt
headers/: I2CHandler.hpp  battery.hpp  batteryHandler.hpp  batteryProtocol.hpp  utils.hpp
sources/: I2CHandler.cpp  batteryHandler.cpp  main.cpp
